--- a/weather.html
+++ b/weather.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <div class="container my-5 mx-auto">
+    <div class="container my-5 m x-auto">
         <h1 class="text-muted text-center my-4 ">Weather </h1>
         <form  class="change-location my-4 text-center text-muted">
             <label for="city"> Enter a location for weather information</label>
@@ -21,6 +21,7 @@
             <img src="https://via.placeholder.com/400x300" class="time card-img-top">
             <div class="icon bg-light mx-auto text-center">
                 <!-- icon here later -->
+                <img src="" alt="">
               </div>
               <div class="text-muted text-uppercase text-center details">
                 <h5 class="my-3">City name</h5>
